# linux-hardening

./: Cargo.toml  config.yaml  strict.yaml
src/: main.rs
src/config/: config.rs
src/tasks/: application.rs  audit.rs  backup.rs  checking.rs  filesystem.rs  ids.rs  kernel.rs  log.rs  mod.rs  network.rs  service.rs  update.rs  user.rs
src/utils/: file.rs  logging.rs  mod.rs  network.rs  process.rs
