[package]
name = "linux-hardening"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.4"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11.3"
nix = "0.29.0"
reqwest = { version = "0.12.4", features = ["json"] }